# commitcanvas-models

./: .gitignore  README.md  TODO.md  angular_repos.csv  data_overview.md  pyproject.toml  results.md
commitcanvas_models/: classify.py  commitcanvas.py
commitcanvas_models/classification_reports/cross/: meta.csv
commitcanvas_models/classification_reports/cross_project/: computed_classification_report_cross_project.csv
commitcanvas_models/classification_reports/project/: classification_report.csv  classification_report_60_40.csv  classification_report_75_25.csv  classification_report_80_20.csv  computed_classification_report_project.csv  meta.txt  split_75_25.csv  split_80_20.csv
commitcanvas_models/data_collection/: collect.py  stats.py
commitcanvas_models/data_experiments/classification_reports/: 75_25.csv  80_20.csv  project_agnostic.csv
commitcanvas_models/data_experiments/projects_metadata/: angular_repos.csv  training_repos.csv  training_repos_small.csv
commitcanvas_models/data_experiments/raw_predictions/: 75_25.csv  80_20.csv
commitcanvas_models/data_handling/: classification.py  collect.py  contributors.csv  full_run.txt  grouped_labels.csv  helpers.py  process.py  selection.py  statistics.py  stats.py
commitcanvas_models/train_model/: model.py  process.py  selection.py  tokenizers.py
tests/: test_commitcanvas_models.py  test_helpers.py  test_model.py  test_selectors.py
